all the changes for the mentr and mentee

--- a/src/Components/Forms/Register/Mentor/MentorForm3.css
+++ b/src/Components/Forms/Register/Mentor/MentorForm3.css
@@ -261,9 +261,9 @@ input:checked + .slider:before {
     align-items: flex-start;
   }
 
-  .datePicker {
+  /* .datePicker {
     width: 100%;
-  }
+  } */
 
   .okButton {
     width: 100%;
