--- a/src/Components/Home/HomeCSS/CalltoactionSection.css
+++ b/src/Components/Home/HomeCSS/CalltoactionSection.css
@@ -96,18 +96,23 @@
 }
 
 .practywiz-CTA-button {
-  background-color: #22d3ee;
-  color: rgb(255, 255, 255);
-  padding: 0.75rem 2rem;
-  border-radius: 9999px;
-  font-weight: 600;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  padding: 0.875rem 2rem;
+  background-color: #2563eb;
+  color: white;
   border: none;
+  border-radius: 0.5rem;
+  font-weight: 500;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.2s ease;
 }
 
 .practywiz-CTA-button:hover {
-  background-color: #67e8f9;
+  background-color: #1d4ed8;
 }
 
 @keyframes slideIn {
@@ -121,7 +126,6 @@
   }
 }
 
-/* Media Queries */
 @media (max-width: 1024px) {
   .practywiz-CTA-container-outer {
     padding: 2rem 4rem;
@@ -192,13 +196,12 @@
   }
 
   .practywiz-CTA-tabs {
-    flex-direction: column;
     width: 100%;
     border-radius: 1rem;
   }
 
   .practywiz-CTA-tab {
-    width: 100%;
+    padding: 0.4rem;
     text-align: center;
   }
 
@@ -215,6 +218,6 @@
   }
 
   .practywiz-CTA-button {
-    width: 100%;
+    width: 70%;
   }
 }
