--- a/src/Components/Home/HomeCSS/RecentInternshipsSection.css
+++ b/src/Components/Home/HomeCSS/RecentInternshipsSection.css
@@ -42,6 +42,12 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  transition: 0.3s all;
+}
+
+.recent_internships_card_inner:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 .recent_internships_card_header {
