--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -229,6 +229,11 @@
     margin-right: 5px;
   }
 }
+@media screen and (max-width: 767.8px) {
+  .menubarUserIconDnone {
+    display: block;
+  }
+}
 
 @media (max-width: 1124px) {
   .nav-container {
