--- a/src/Components/CaseStudy/CaseStudyDisplay.css
+++ b/src/Components/CaseStudy/CaseStudyDisplay.css
@@ -63,6 +63,13 @@
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
+.case-study-video > img {
+  margin: auto;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
 
 .case-btn-container {
   display: flex;
