--- a/src/Components/Home/HomeCSS/FeaturedCasesSection.css
+++ b/src/Components/Home/HomeCSS/FeaturedCasesSection.css
@@ -147,13 +147,17 @@
   .ai-casestudy-featured-grid {
     grid-template-columns: repeat(2, 1fr);
   }
-  .ai-casestudy-featured-section {
-    padding: 5rem 7rem;
-  }
 }
 
 @media (min-width: 1024px) {
+  .ai-casestudy-featured-section {
+    padding: 5rem 24px;
+  }
   .ai-casestudy-featured-grid {
     grid-template-columns: repeat(3, 1fr);
+  }
+  .ai-casestudy-featured-container {
+    max-width: 1300px;
+    margin: 0 auto;
   }
 }
