--- a/src/Components/Home/HomeCSS/HeroSection.css
+++ b/src/Components/Home/HomeCSS/HeroSection.css
@@ -3,12 +3,14 @@
   max-width: 100vw;
   min-width: 100vw;
   background-color: #2563eb;
+  margin: auto;
   margin-top: 3rem;
-  padding: 7rem;
+  padding: 7rem 24px;
   color: white;
   overflow: hidden;
   display: flex;
   align-items: center;
+  max-width: 1300px;
 }
 
 .hero-main-container::before,
@@ -203,7 +205,7 @@
 }
 
 .hero-achievement-content h3 {
-  color: #67e8f9;
+  color: #ffffff;
   font-size: 1.5rem;
   font-weight: 500;
   margin-top: 2rem;
@@ -211,7 +213,7 @@
 }
 
 .hero-achievement-content p {
-  color: #67e8f9;
+  color: #ffffff;
   font-size: 1rem;
   font-weight: 500;
 }
