sign up images changes  and bug fixing

--- a/src/Components/Forms/Register/Mentee/menteeregistration.css
+++ b/src/Components/Forms/Register/Mentee/menteeregistration.css
@@ -352,7 +352,7 @@ form .dieyhr_iuhfiderr .btn-main:first-child {
   border: 1px solid #acaeaf !important;
 }
 .ihduwfr_form_wrapper {
-  height: 25rem;
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   padding: 0.8rem;
