--- a/src/Styles/custombs.css
+++ b/src/Styles/custombs.css
@@ -3603,3 +3603,7 @@ fieldset:disabled .btn {
 .bg-transparent {
   background-color: transparent !important;
 }
+
+.form_wrapper{
+  border-bottom: 1px solid #cdcdcd;
+}
